correct spacing in the "get back" link in details page

--- a/pages/admin/issues/IssueStatus.module.css
+++ b/pages/admin/issues/IssueStatus.module.css
@@ -15,7 +15,8 @@
   letter-spacing: -0.25px;
 
   color: #ffffff;
-  padding: 35px 0px;
+  padding-top: 1px;
+  padding-bottom: 26px;
 }
 
 .arrow {
